# fillit

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  author  main.c
fill_it/: fillit.h  main.c  misc.c  output.c  read_file.c  recursive_solver.c  runner.c  solve_tetros.c
fillit/: CMakeLists.txt  fillit.h  misc.c  output.c  read_file.c  recursive_solver.c  runner.c  solve_tetros.c
libft/: Makefile
